@@ -1,8 +1,9 @@
-# This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.031
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Exporter" => "5.57";
 requires "Sub::Util" => "1.40";
+requires "meta" => "0";
 requires "perl" => "v5.14.0";
 requires "strict" => "0";
 requires "warnings" => "0";
